[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/Prop/WindmillBlades.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 8 )

[node name="WindmillBlades" type="Node2D"]
script = ExtResource( 1 )

[node name="BladeNorth" type="KinematicBody2D" parent="."]
position = Vector2( 0, -64 )
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BladeNorth"]
shape = SubResource( 1 )
one_way_collision = true

[node name="BladeEast" type="KinematicBody2D" parent="."]
position = Vector2( 64, 0 )
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BladeEast"]
shape = SubResource( 1 )
one_way_collision = true

[node name="BladeSouth" type="KinematicBody2D" parent="."]
position = Vector2( 0, 64 )
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BladeSouth"]
shape = SubResource( 1 )
one_way_collision = true

[node name="BladeWest" type="KinematicBody2D" parent="."]
position = Vector2( -64, 0 )
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BladeWest"]
shape = SubResource( 1 )
one_way_collision = true
